--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+bcrypt==3.2.0
+cffi==1.15.0
 certifi==2019.3.9
 chardet==3.0.4
 click==7.1.2
@@ -7,7 +9,10 @@ idna==2.8
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.1.1
+pycparser==2.19
 requests==2.21.0
+six==1.11.0
 SQLAlchemy==1.3.1
 urllib3==1.24.1
 Werkzeug==0.14.1
+
